# bulk_mail_manager

./: .env-sample  README.md  pyproject.toml
config/: settings.py  urls.py
mail/: admin.py  forms.py  mixins.py  models.py  services.py  urls.py  views.py
mail/management/commands/: send_bulk_mail.py
mail/migrations/: 0001_initial.py  0002_bulkmail_name.py  0003_bulkmail_owner_receiver_owner.py  0004_alter_bulkmail_owner_alter_bulkmail_status_and_more.py  0005_alter_bulkmail_owner.py  0006_alter_bulkmail_owner.py  0007_alter_bulkmail_options.py  0008_message_owner.py  0009_alter_message_owner.py  0010_alter_bulkmailattempt_bulk_mail_alter_message_owner.py
mail/templates/mail/: attempts.html  delete_form.html  home.html  mail_detail.html  mail_form.html  mails.html  message_detail.html  message_form.html  messages.html  receiver_detail.html  receiver_form.html  receivers.html
templates/: base.html  footer.html  header.html
templates/registration/: password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: create_managers.py  createadmin.py
users/migrations/: 0001_initial.py  0002_alter_customuser_options_customuser_is_blocked.py  0003_alter_customuser_options.py  0004_customuser_avatar_customuser_country_and_more.py  0005_alter_customuser_country_and_more.py  0006_remove_customuser_is_blocked.py  0007_customuser_is_blocked.py
users/templates/users/: login.html  (+8 more)
users/templatetags/: user_tags.py
